--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".NeighbourDescriptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".NeighbourDescription"
             android:exported="false" />
         <activity
