--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false"
             android:label="@string/activity_new_neighbour" />
         <activity
-            android:name=".ui.neighbour_list.ListNeighbourActivity"
+            android:name=".ui.neighbour_list.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
